--- a/student/studapp/templates/display.html
+++ b/student/studapp/templates/display.html
@@ -28,7 +28,7 @@ margin-top:20px;
 <body>
 
  <table align="center" class="table table-bordered" style="width: 1000px; border-color: black;">
-
+<h1 align="center" style="margin-top:40px;">STUDENTS LIST</h1>
             <tr>
                 <th scope="col">Sl.No</th>
                 <th scope="col">Student Name</th>
